fixed wrapping at 1024px; also fixed horizontal scrollbar

--- a/app/assets/stylesheets/diaedu/index_list.css.scss
+++ b/app/assets/stylesheets/diaedu/index_list.css.scss
@@ -1,6 +1,5 @@
 div.diaedu-content div.index-list {
   display: table;
-  width: 856px;
   margin-bottom: 20px;
 
   div.index-row {
@@ -34,7 +33,6 @@ div.diaedu-content div.index-list {
     }
 
     div.main-cell {
-      width: 620px;
       padding-right: 0;
 
       div.tags {
