--- a/app/assets/stylesheets/diaedu/inner.css.scss
+++ b/app/assets/stylesheets/diaedu/inner.css.scss
@@ -4,6 +4,7 @@ div.diaedu-content {
   padding: 6px 0 30px 0;
   width: 1110px;
   margin: 0 auto;
+  white-space: nowrap;
 
   /* loading indicator */
   img.loader {
@@ -17,6 +18,7 @@ div.diaedu-content {
     margin-left: 20px;
     width: 856px;
     min-height: 500px;
+    white-space: normal;
 
     /* add link at top of a page */
     button.btn-add {
@@ -39,5 +41,12 @@ div.diaedu-content {
         font-weight: 400;
       }
     }
+  }
+}
+
+/* main should get smaller when lower res */
+@media (max-width: 1170px) {
+  div.diaedu-content div.main {
+    width: 700px;
   }
 }
