--- a/app/assets/stylesheets/diaedu/left_pane.css.scss
+++ b/app/assets/stylesheets/diaedu/left_pane.css.scss
@@ -4,6 +4,7 @@ div.diaedu-content {
     width: 230px;
     display: inline-block;
     vertical-align: top;
+    white-space: normal;
 
     div.block {
       background-color: #f4f4f4;
