--- a/app/assets/stylesheets/diaedu/outer.css.scss
+++ b/app/assets/stylesheets/diaedu/outer.css.scss
@@ -80,6 +80,8 @@ header.d-header {
   border: none;
   background-color: #86A8A5;
   margin-bottom: 0;
+  padding-top: 0;
+  padding-right: 0;
 
   /* don't 'dock' the header */
   position: relative !important;
